# django-authkit

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: README.md
example_django_app/: README.md  manage.py
example_django_app/example_project/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
example_django_app/pages/: __init__.py  apps.py  urls.py  views.py
src/authkit/: __init__.py  email.py  models.py  urls.py
src/authkit/admin/: __init__.py
src/authkit/api/: __init__.py  permissions.py  urls.py  views.py
src/authkit/apps/: __init__.py  config.py
src/authkit/audit_log/: __init__.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
src/authkit/authentication/: __init__.py  serializers.py  tokens.py  urls.py  views.py
src/authkit/conf/: __init__.py  settings.py
src/authkit/migrations/: 0001_initial.py  0002_socialaccount.py  0003_auditlog.py  __init__.py
src/authkit/password_reset/: __init__.py  email.py  serializers.py  tokens.py  urls.py  views.py
src/authkit/permissions/: __init__.py  permissions.py  serializers.py  urls.py  views.py
src/authkit/roles/: __init__.py  permissions.py  serializers.py  urls.py  views.py
src/authkit/social_auth/: __init__.py  exceptions.py  models.py  serializers.py  services.py  urls.py  views.py
src/authkit/social_auth/providers/: __init__.py  base.py  google.py  registry.py
src/authkit/users/: __init__.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/authkit/verification/: __init__.py  email.py  serializers.py  tokens.py  urls.py  views.py
tests/: __init__.py  included_urls.py  settings.py  test_audit_log.py  test_authentication_api.py  test_password_reset_api.py  test_permissions_api.py  test_roles_api.py  test_social_auth_api.py  test_urls.py  test_users_api.py  test_users_model.py  test_verification_api.py
